--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                 I'm a web developer who loves to create beautiful and functional websites
                 for people who want to make a difference in the world.
             </p>
-            <p>Currently I'm a student of IET DAVV,Indore , where I'm learning how to
-            create beautiful and functional websites using HTML, CSS, JavaScript.</p>
+            <p>"I’m currently pursuing my studies at IET DAVV, Indore, where I’m developing strong skills in front-end web development. I specialize in building visually appealing and user-friendly websites using HTML, CSS, and JavaScript."</p>
 
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
