--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@
                         <h3>Deependra Kumar Ary</h3>
                         <p>"Impressive work with clean, maintainable code and beautiful design. A dependable developer who understood our needs quickly and provided innovative solutions. Great collaboration and timely delivery—an asset to any web development project!"</p>
                     </div>
+                     <div class="testimonial-slide swiper-slide">
+                        <img src="images/testimonial4.jpg" alt="">
+                        <h3>Tushar Jain</h3>
+                        <p>"Extremely talented and detail-oriented developer who consistently delivers clean, efficient, and user-friendly websites. Their problem-solving skills and creativity shine through every project, making complex functionality look simple and seamless. Highly recommended for any web development needs."</p>
+                    </div>
                 </div>
 
                 <div class="swiper-button-next"></div>
