--- a/index.html
+++ b/index.html
@@ -221,8 +221,13 @@
                     </div>
                     <div class="testimonial-slide swiper-slide">
                         <img src="images/testimonial3.jpg" alt="">
-                        <h3>Deependra Kumar Ary</h3>
+                        <h3>Deependra Kumar Arya</h3>
                         <p>"Impressive work with clean, maintainable code and beautiful design. A dependable developer who understood our needs quickly and provided innovative solutions. Great collaboration and timely delivery—an asset to any web development project!"</p>
+                    </div>
+                    <div class="testimonial-slide swiper-slide">
+                        <img src="images/testimonial4.jpg" alt="">
+                        <h3>Tushar Jain</h3>
+                        <p>“I owe a big part of my journey in React and Data Science to Rajat Goyal. From helping me understand core concepts to guiding me through real-world projects, his mentorship and constant support have been priceless. Rajat has a rare ability to simplify complex ideas and always pushes you to bring out your best. I genuinely wouldn’t be where I am without his help.”</p>
                     </div>
                 </div>
 
